--- a/about.html
+++ b/about.html
@@ -11,6 +11,25 @@
     <meta name="description" content="" />
     <meta name="keywords" content="" />
     <link rel="stylesheet" href="assets/css/main.css" />
+    <style>
+      .arrow {
+        width: 50px;
+        height: 50px;
+        border-right: 5px solid black;
+        border-bottom: 5px solid black;
+        transform: rotate(45deg);
+        animation: bounce 1s infinite alternate;
+      }
+
+      @keyframes bounce {
+        0% {
+          transform: rotate(45deg) translateX(0);
+        }
+        100% {
+          transform: rotate(45deg) translateX(10px);
+        }
+      }
+    </style>
   </head>
   <style></style>
   <body class="is-preload">
@@ -40,11 +59,55 @@
             <h2>O firmie Renart</h2>
           </header>
           <p>
-            Renart to firma specjalizująca się w wynajmie stołów, zastawy oraz
-            aranżacji stołów na różne okazje. Oferujemy eleganckie i dopasowane
-            do stylu wydarzenia rozwiązania, zapewniając wyjątkową oprawę każdej
-            uroczystości. Skontaktuj się ze mną, aby stworzyć idealne nakrycie
-            stołu dla Twojego wydarzenia!
+            Oferuję dwie opcje, dostosowane do Twoich potrzeb:<br />
+            <strong> 1. <u>KOMPLEKSOWA ORGANIZACJA PRZYJĘCIA</u></strong
+            ><br />
+            To idealne rozwiązanie, jeśli chcesz, by wszystko było perfekcyjnie
+            przygotowane bez Twojego wysiłku.<br />
+            Wystarczy, że powiesz mi, ile osób zapraszasz, jakie masz
+            oczekiwania i preferencje, a ja zajmę się resztą! W ramach tej
+            usługi zapewniam: <br />
+            &#128073; Wypożyczenie kompletnej zastawy stołowej, w której
+            znajdziesz wszystko, czego potrzeba do eleganckiego przyjęcia:
+            <br />
+            -talerze obiadowe (głębokie i płytkie) <br />
+            -wazy na zupę <br />-talerzyki deserowe <br />
+            -filiżanki ze spodkami <br />
+            -cukiernice <br />
+            -mleczniki <br />
+            -komplet sztućców: widelce, noże, łyżki, łyżeczki do kawy i
+            deserów,<br />
+            -widelczyki, łopatki do ciasta <br />
+            -kieliszki do wody, wina, szampana i wódki <br />
+            -szklanki do wody, soków, drinków <br />
+            -dzbanki do napoi, wody <br />
+            -eleganckie serwety flizelinowe <br />
+            &#128073; Wypożyczenie stołów, krzeseł i obrusów, tak by wszystko
+            było spójne i harmonijne <br />
+            &#128073; Pełną aranżację stołu, czyli: <br />
+            - pięknie skomponowane kwiaty <br />
+            -eleganckie świeczniki i świece tworzące magiczny nastrój<br />
+            To wszystko dostarczam na miejsce, osobiście przygotowuję całą
+            przestrzeń, dbam o każdy detal, a po przyjęciu odbieram wyposażenie.
+            Ty po prostu siadasz przy stole i cieszysz się wyjątkowym czasem z
+            najbliższymi.<br />
+            <br />
+            Cena ustalana indywidualnie.<br />
+            <strong>2. <u>CZĘŚCIOWA ORGANIZACJA PRZYJĘCIA</u></strong
+            ><br />
+            Jeśli masz ochotę samodzielnie zadbać o część przygotowań, ale
+            chcesz skorzystać z mojego wyposażenia, możesz wybrać:<br />
+            &#128073; Kompletną zastawę stołową - 49 zł/os.<br />
+            &#128073; Stoły, krzesła i obrusy - 39 zł/os. <br />&#128073;
+            Dekoracje stołów - 29 zł/os. <br />Ważne:<br />
+            &#128073; W opcji częściowej transport wyceniam indywidualnie.<br />
+            &#128073; Możesz również odebrać wyposażenie osobiście -
+            bezpłatnie.<br />
+            &#128073; Personalizowana aranżacja stołów wykonana na życzenie
+            klienta jest dostępna tylko w opcji kompleksowej lub za dodatkową
+            opłata.<br />
+            <br />
+            Ren-Artka
           </p>
         </div>
       </div>
