--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
         </div>
         <div class="content">
           <h2 class="alt">
-            <a href="#">Czemu właśnie moje usługi?</a>
+            <a href="about.html">Czemu właśnie moje usługi?</a>
           </h2>
           <h2 class="alt">Przekonaj się!</h2>
           <ul class="actions">
-            <li><a href="#" class="button">Dowiedz się więcej!</a></li>
+            <li><a href="about.html" class="button">Dowiedz się więcej!</a></li>
           </ul>
         </div>
       </article>
