--- a/assort.html
+++ b/assort.html
@@ -28,6 +28,54 @@
         border-radius: 10px; /* Optional: rounded corners */
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); /* Optional: shadow */
       }
+      .gallery {
+        display: flex;
+        gap: 10px;
+        flex-wrap: wrap;
+      }
+
+      .gallery img {
+        width: 150px;
+        height: auto;
+        cursor: pointer;
+        transition: transform 0.2s;
+      }
+
+      .gallery img:hover {
+        transform: scale(1.1);
+      }
+
+      /* Lightbox (Fullscreen Overlay) */
+      .lightbox {
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.8);
+        justify-content: center;
+        align-items: center;
+      }
+
+      .lightbox img {
+        max-width: 90%;
+        max-height: 90%;
+        border-radius: 5px;
+      }
+
+      .lightbox:target {
+        display: flex;
+      }
+
+      .close {
+        position: absolute;
+        top: 20px;
+        right: 30px;
+        font-size: 30px;
+        color: white;
+        text-decoration: none;
+      }
     </style>
   </head>
   <style></style>
@@ -54,7 +102,39 @@
           <header>
             <h2>Nasz asortyment</h2>
           </header>
-
+          <p>
+            Planujesz wyjątkowe wydarzenie? Oferuję wynajem wysokiej jakości
+            wyposażenia eventowego, które doda elegancji każdej uroczystości!
+            Każdy detal ma znaczenie, gdy tworzysz niezapomniane chwile. Moja
+            oferta to starannie wyselekcjonowane elementy wyposażenia
+            eventowego, które łączą w sobie elegancję, funkcjonalność i
+            najwyższą jakość. <br />
+            <strong> Krzesła Hagea</strong> - stylowe i wygodne, idealne na
+            bankiety, uroczystości, wesela czy konferencje, wyrafinowany design
+            i komfort, harmonijnie wpisują się w każdą aranżację - od klasycznej
+            po nowoczesną. <br /><strong>Stoły bankietowe</strong> - solidne, w
+            różnych rozmiarach, idealne do każdej aranżacji, zapewniają
+            stabilność i estetykę w doskonałym wydaniu, dopasują się do
+            najróżniejszych pomieszczeń.<br />
+            <strong> Włoskie sztućce</strong> - elegancki, nowoczesny design i
+            perfekcyjne wykonanie oraz ponadczasowa klasyka, to wszystko sprawi
+            niezapomnianą oprawę stołu i podniesie rangę każdej uroczystości.<br />
+            <strong>Porcelana Rak</strong> - najwyższa jakość prostoty i
+            nowoczesności, synonim luksusu i finezji, nieodzowny element
+            wykwintnych przyjęć, podkreśli prestiż Twojego wydarzenia.<br />
+            <strong> Szkło Krosno</strong> - bardzo dobrej jakości kieliszki do
+            wina, wódki, szklanki do drinków czy whisky to ważny i wyrafinowany
+            akcent każdej imprezy. <br /><br />Podnieś standard swojego
+            wydarzenia i nadaj mu niepowtarzalny charakter.<br />
+            Oferujemy wynajem prestiżowego wyposażenia, które zachwyci Twoich
+            gości.<br /><br />
+            Skontaktuj się z nami i twórz niezapomniane wspomnienia w
+            perfekcyjnej oprawie.<br /><br />
+            Zadbaj o wyjątkowy klimat swojego eventu - wynajmij najlepsze
+            wyposażenie u nas! Skontaktuj się już dziś!
+          </p>
+          <br /><br />
+          <strong> Ren-Artka</strong>
           <span class="image fit"><img src="images/boho.png" alt="" /></span>
         </div>
       </div>
