--- a/index.html
+++ b/index.html
@@ -79,33 +79,33 @@
       <div class="wrapper">
         <div class="posts inner">
           <div>
-            <article>
-              <h2>
-                Ren Art - Twój partner w organizacji niezapomnianych wydarzeń
-              </h2>
-              <p>
-                Ren Art to firma specjalizująca się w wynajmie eleganckich
-                stołów, zastawy stołowej i dekoracji na wszelkiego rodzaju
-                imprezy i uroczystości. Niezależnie od tego, czy organizujesz
-                wesele, bankiet, urodziny czy firmowe przyjęcie, nasza oferta
-                pozwoli Ci stworzyć wyjątkową atmosferę, która zachwyci Twoich
-                gości.
-              </p>
-              <p>
-                Dzięki szerokiemu wyborowi wysokiej jakości naczyń, sztućców,
-                obrusów i dekoracji dopasujemy się do każdego stylu i charakteru
-                wydarzenia. Współpracujemy zarówno z osobami prywatnymi, jak i
-                firmami oraz agencjami eventowymi, oferując kompleksową obsługę
-                i doradztwo w zakresie aranżacji stołów.
-              </p>
-              <p>
-                Nasza firma stawia na profesjonalizm, dbałość o detale oraz
-                terminowość, dzięki czemu możesz mieć pewność, że wszystko
-                będzie przygotowane na najwyższym poziomie. Zaufaj Ren Art i
-                stwórz z nami wyjątkowe chwile pełne klasy i stylu!
-              </p>
+            <article style="color: #ff0000">
+              <h2 style="color: #ff0000">Cześć, nazywam się Renata.</h2>
+
+              Od zawsze wierzę, że najpiękniejsze wspomnienia rodzą się przy
+              wspólnym stole. Sama uwielbiam celebrować chwile w gronie
+              najbliższych, dlatego organizacja przyjęć to dla mnie coś więcej
+              niż praca - to pasja, którą pragnę dzielić się z innymi. Wiem, jak
+              ważne jest, by każdy detal tworzył wyjątkowy nastrój, który na
+              długo pozostaje w sercu. <br />
+              <br />Właśnie dlatego stworzyłam Ren-Art Event - by pomagać
+              ludziom przeżywać wyjątkowe momenty bez stresu i gonitwy za
+              organizacją. Chcę, byś Ty i Twoi bliscy mogli skupić się na sobie,
+              a ja zaplanuję i przygotuję całą resztę. <br />
+              <br />Dlaczego warto mi zaufać? <br />
+              Bo wiem, jak ważne są chwile spędzone z bliskimi. Bo dbam o każdy
+              detal, tak jakbym przygotowywała przyjęcie dla własnej rodziny. Bo
+              chcę, abyś mógła po prostu cieszyć się tym dniem, bez stresu i
+              pośpiechu. Z radością pomogę Ci stworzyć magiczne przyjęcie, które
+              zostanie w sercach Twoich gości na długo. Z miłością do pięknych
+              chwil<br />
+              <span style="font-size: larger; font-weight: bold"
+                >Ren-Artka</span
+              >
               <ul class="actions">
-                <li><a href="#" class="button">Dowiedz się więcej</a></li>
+                <li>
+                  <a href="about.html" class="button">Dowiedz się więcej</a>
+                </li>
               </ul>
             </article>
           </div>
