--- a/assort.html
+++ b/assort.html
@@ -22,59 +22,40 @@
       }
 
       /* Set video size */
-      video {
-        max-width: 80%; /* 80% of screen width */
-        max-height: 70vh; /* 70% of screen height */
-        border-radius: 10px; /* Optional: rounded corners */
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); /* Optional: shadow */
-      }
+
       .gallery {
+        max-width: 500px;
+        text-align: center;
+      }
+
+      .main-image {
+        width: 100%;
+
+        object-fit: cover;
+        border-radius: 5px;
+        transition: opacity 0.3s ease-in-out;
+      }
+
+      .thumbnail-container {
         display: flex;
         gap: 10px;
-        flex-wrap: wrap;
-      }
-
-      .gallery img {
-        width: 150px;
-        height: auto;
-        cursor: pointer;
-        transition: transform 0.2s;
-      }
-
-      .gallery img:hover {
-        transform: scale(1.1);
-      }
-
-      /* Lightbox (Fullscreen Overlay) */
-      .lightbox {
-        display: none;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: rgba(0, 0, 0, 0.8);
         justify-content: center;
-        align-items: center;
+        margin-top: 10px;
       }
 
-      .lightbox img {
-        max-width: 90%;
-        max-height: 90%;
+      .thumbnail {
+        width: 80px;
+        height: 80px;
+        cursor: pointer;
+        object-fit: cover;
+        border: 2px solid transparent;
         border-radius: 5px;
+        transition: border 0.2s ease-in-out;
       }
 
-      .lightbox:target {
-        display: flex;
-      }
-
-      .close {
-        position: absolute;
-        top: 20px;
-        right: 30px;
-        font-size: 30px;
-        color: white;
-        text-decoration: none;
+      .thumbnail:hover,
+      .thumbnail.active {
+        border: 2px solid #007bff;
       }
     </style>
   </head>
@@ -135,7 +116,6 @@
           </p>
           <br /><br />
           <strong> Ren-Artka</strong>
-          <span class="image fit"><img src="images/boho.png" alt="" /></span>
         </div>
       </div>
     </div>
