Webdev is godly

--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
 
     <!-- Main -->
     <div id="main">
-      <div class="wrapper">
+      <div class="wrapper" style="color: black; font-style: italic">
         <div class="inner">
           <span class="image fit"
             ><img src="images/chrzestex.png" alt=""
@@ -107,7 +107,7 @@
             klienta jest dostępna tylko w opcji kompleksowej lub za dodatkową
             opłata.<br />
             <br />
-            Ren-Artka
+            <span style="font-size: larger; font-weight: bold">Ren-Artka</span>
           </p>
         </div>
       </div>
