--- a/assort.html
+++ b/assort.html
@@ -78,7 +78,7 @@
 
     <!-- Main -->
     <div id="main">
-      <div class="wrapper">
+      <div class="wrapper" style="color: black; font-style: italic">
         <div class="inner">
           <header>
             <h2>Nasz asortyment</h2>
@@ -109,10 +109,12 @@
             wydarzenia i nadaj mu niepowtarzalny charakter.<br />
             Oferujemy wynajem prestiżowego wyposażenia, które zachwyci Twoich
             gości.<br /><br />
-            Skontaktuj się z nami i twórz niezapomniane wspomnienia w
-            perfekcyjnej oprawie.<br /><br />
-            Zadbaj o wyjątkowy klimat swojego eventu - wynajmij najlepsze
-            wyposażenie u nas! Skontaktuj się już dziś!
+            <span style="font-size: larger; font-weight: bold">
+              Skontaktuj się ze mną i twórz niezapomniane wspomnienia w
+              perfekcyjnej oprawie.<br /><br />
+              Zadbaj o wyjątkowy klimat swojego eventu - wynajmij najlepsze
+              wyposażenie u mnie! Skontaktuj się już dziś!
+            </span>
           </p>
           <br /><br />
           <strong> Ren-Artka</strong>
