--- a/index.html
+++ b/index.html
@@ -79,8 +79,10 @@
       <div class="wrapper">
         <div class="posts inner">
           <div>
-            <article style="color: #ff0000">
-              <h2 style="color: #ff0000">Cześć, nazywam się Renata.</h2>
+            <article style="color: #ff0000; font-style: italic">
+              <h2 style="color: #ff0000; font-style: italic">
+                Cześć, nazywam się Renata.
+              </h2>
 
               Od zawsze wierzę, że najpiękniejsze wspomnienia rodzą się przy
               wspólnym stole. Sama uwielbiam celebrować chwile w gronie
