--- a/about.html
+++ b/about.html
@@ -29,6 +29,12 @@
           transform: rotate(45deg) translateX(10px);
         }
       }
+      p {
+        padding-top: 2px;
+        padding-bottom: 2px;
+        margin-top: 2px;
+        margin-bottom: 2px;
+      }
     </style>
   </head>
   <style></style>
@@ -60,55 +66,78 @@
           </header>
           <p>
             Oferuję dwie opcje, dostosowane do Twoich potrzeb:<br />
-            <strong> 1. <u>KOMPLEKSOWA ORGANIZACJA PRZYJĘCIA</u></strong
-            ><br />
+            <strong>
+              <p>
+                &nbsp; &nbsp; &nbsp;1.<u>KOMPLEKSOWA ORGANIZACJA PRZYJĘCIA</u>
+              </p></strong
+            >
+          </p>
+
+          <p>
             To idealne rozwiązanie, jeśli chcesz, by wszystko było perfekcyjnie
             przygotowane bez Twojego wysiłku.<br />
             Wystarczy, że powiesz mi, ile osób zapraszasz, jakie masz
-            oczekiwania i preferencje, a ja zajmę się resztą! W ramach tej
-            usługi zapewniam: <br />
-            &#128073; Wypożyczenie kompletnej zastawy stołowej, w której
-            znajdziesz wszystko, czego potrzeba do eleganckiego przyjęcia:
-            <br />
-            -talerze obiadowe (głębokie i płytkie) <br />
-            -wazy na zupę <br />-talerzyki deserowe <br />
-            -filiżanki ze spodkami <br />
-            -cukiernice <br />
-            -mleczniki <br />
-            -komplet sztućców: widelce, noże, łyżki, łyżeczki do kawy i
-            deserów,<br />
-            -widelczyki, łopatki do ciasta <br />
-            -kieliszki do wody, wina, szampana i wódki <br />
-            -szklanki do wody, soków, drinków <br />
-            -dzbanki do napoi, wody <br />
-            -eleganckie serwety flizelinowe <br />
-            &#128073; Wypożyczenie stołów, krzeseł i obrusów, tak by wszystko
-            było spójne i harmonijne <br />
-            &#128073; Pełną aranżację stołu, czyli: <br />
-            - pięknie skomponowane kwiaty <br />
-            -eleganckie świeczniki i świece tworzące magiczny nastrój<br />
-            To wszystko dostarczam na miejsce, osobiście przygotowuję całą
-            przestrzeń, dbam o każdy detal, a po przyjęciu odbieram wyposażenie.
-            Ty po prostu siadasz przy stole i cieszysz się wyjątkowym czasem z
-            najbliższymi.<br />
-            <br />
-            Cena ustalana indywidualnie.<br />
-            <strong>2. <u>CZĘŚCIOWA ORGANIZACJA PRZYJĘCIA</u></strong
-            ><br />
-            Jeśli masz ochotę samodzielnie zadbać o część przygotowań, ale
-            chcesz skorzystać z mojego wyposażenia, możesz wybrać:<br />
-            &#128073; Kompletną zastawę stołową - 49 zł/os.<br />
-            &#128073; Stoły, krzesła i obrusy - 39 zł/os. <br />&#128073;
-            Dekoracje stołów - 29 zł/os. <br />Ważne:<br />
-            &#128073; W opcji częściowej transport wyceniam indywidualnie.<br />
-            &#128073; Możesz również odebrać wyposażenie osobiście -
-            bezpłatnie.<br />
-            &#128073; Personalizowana aranżacja stołów wykonana na życzenie
-            klienta jest dostępna tylko w opcji kompleksowej lub za dodatkową
-            opłata.<br />
-            <br />
-            <span style="font-size: larger; font-weight: bold">Ren-Artka</span>
+            oczekiwania i preferencje, a ja zajmę się resztą!
           </p>
+          <p>W ramach tej usługi zapewniam:</p>
+          &#129138; Wypożyczenie kompletnej zastawy stołowej, w której
+          znajdziesz wszystko, czego potrzeba do eleganckiego przyjęcia:
+          <br />
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-talerze obiadowe (głębokie i
+          płytkie) <br />
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-wazy na zupę
+          <br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-talerzyki deserowe <br />
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-filiżanki ze spodkami <br />
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-cukiernice <br />
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-mleczniki <br />
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-komplet sztućców: widelce, noże,
+          łyżki, łyżeczki do kawy i deserów,<br />
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-widelczyki, łopatki do ciasta
+          <br />
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-kieliszki do wody, wina, szampana
+          i wódki <br />
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-szklanki do wody, soków, drinków
+          <br />
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-dzbanki do napoi, wody <br />
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-eleganckie serwety flizelinowe
+          <br />
+          &#129138; Wypożyczenie stołów, krzeseł i obrusów, tak by wszystko było
+          spójne i harmonijne <br />
+          &#129138; Pełną aranżację stołu, czyli: <br />
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- pięknie skomponowane kwiaty
+          <br />
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-eleganckie świeczniki i świece
+          tworzące magiczny nastrój<br />
+          To wszystko dostarczam na miejsce, osobiście przygotowuję całą
+          przestrzeń, dbam o każdy detal, a po przyjęciu odbieram wyposażenie.
+          Ty po prostu siadasz przy stole i cieszysz się wyjątkowym czasem z
+          najbliższymi.<br />
+          <br />
+          Cena ustalana indywidualnie.<br />
+          <br />
+          <br />
+          <br />
+          <br />
+          <br />
+          <strong
+            >&nbsp; &nbsp; &nbsp;2.
+            <u>CZĘŚCIOWA ORGANIZACJA PRZYJĘCIA</u></strong
+          ><br />
+          Jeśli masz ochotę samodzielnie zadbać o część przygotowań, ale chcesz
+          skorzystać z mojego wyposażenia, możesz wybrać:<br />
+          &nbsp; &nbsp; &nbsp;&#129138; Kompletną zastawę stołową - 49 zł/os.<br />
+          &nbsp; &nbsp; &nbsp;&#129138; Stoły, krzesła i obrusy - 39 zł/os.
+          <br />&nbsp; &nbsp; &nbsp;&#129138; Dekoracje stołów - 29 zł/os.
+          <br />Ważne:<br />
+          &nbsp; &nbsp; &nbsp; &#129138; W opcji częściowej transport wyceniam
+          indywidualnie.<br />
+          &nbsp; &nbsp; &nbsp; &#129138; Możesz również odebrać wyposażenie
+          osobiście - bezpłatnie.<br />
+          &nbsp; &nbsp; &nbsp; &#129138; Personalizowana aranżacja stołów
+          wykonana na życzenie klienta jest dostępna tylko w opcji kompleksowej
+          lub za dodatkową opłata.<br />
+          <br />
+          <img class="image" src="images/renartka.png" alt="Ren-Artka" />
         </div>
       </div>
     </div>
@@ -186,5 +215,24 @@
     <script src="assets/js/breakpoints.min.js"></script>
     <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
+    <script>
+      function updateImgClass() {
+        let images = document.querySelectorAll("img"); // Select all <img> tags
+
+        images.forEach((img) => {
+          if (window.innerWidth < 720) {
+            img.classList.add("fit"); // Add class for small screens
+          } else {
+            img.classList.remove("fit"); // Remove class for larger screens
+          }
+        });
+      }
+
+      // Run on page load
+      document.addEventListener("DOMContentLoaded", updateImgClass);
+
+      // Run on window resize
+      window.addEventListener("resize", updateImgClass);
+    </script>
   </body>
 </html>
