--- a/assort.html
+++ b/assort.html
@@ -68,7 +68,7 @@
         <ul>
           <li><a href="index.html">Strona główna</a></li>
 
-          <li><a href="about.html">Czym się zajmujemy</a></li>
+          <li><a href="about.html">Czym się zajmuję</a></li>
           <li class="current"><a href="assort.html">Asortyment</a></li>
           <li><a href="gallery.html">Galeria</a></li>
           <li><a href="contact.html">Kontakt</a></li>
