--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
         <ul>
           <li><a href="index.html">Strona główna</a></li>
 
-          <li class="current"><a href="about.html">Czym się zajmujemy</a></li>
+          <li class="current"><a href="about.html">Czym się zajmuję</a></li>
           <li><a href="assort.html">Asortyment</a></li>
           <li><a href="gallery.html">Galeria</a></li>
           <li><a href="contact.html">Kontakt</a></li>
