--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <ul>
           <li class="current"><a href="index.html">Strona główna</a></li>
 
-          <li><a href="about.html">Czym się zajmujemy</a></li>
+          <li><a href="about.html">Czym się zajmuję</a></li>
           <li><a href="assort.html">Asortyment</a></li>
           <li><a href="gallery.html">Galeria</a></li>
           <li><a href="contact.html">Kontakt</a></li>
